ver0.2.0
- Made "button" key optional
- Fixed a bug that text boxes can't handle their input values properly.
- Introduced tests and linting

ver0.1.3
- Added "empty_message" option to text box and pickers. They can show messages when their text boxes are empty.
- Added "default" option to check box and text box
- Fixed errors when failing to read json files
- Removed dependancies from macOS build

ver0.1.2
- Fixed a bug it needs dll for runtime libs

ver0.1.1
- Added textbox to GUI components
- Changed json format
- Fixed an error when reading utf-16 strings from stdout
- Fixed a bug can't read configs for checkboxes

ver0.1.0
- Added support for mac and linux (ubuntu)
- Added console window for linux
- Added add_quotes option to components
- Fixed bug when compiling with gcc

ver0.0.4
- Added UTF-8 support for Windows
- Added format check for gui_definition.json
- Added a function to add quotes to path
- Changed command format

ver0.0.3
- Added checkboxes to GUI components
- Added width setting to choice
- Improved error handling

ver0.0.2
- Added checkbox and text to GUI components
- Added support for multiple commands
- Added support for help URLs
- Added function to save status

ver0.0.1
- Initial release