@@ -1,3 +1,0 @@
-
-cd %~dp0
-%comspec% /k "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars64.bat"
