@@ -1,5 +1,4 @@
 {
-    "All components with their required keys.": null,
     "Some file path": {
         "str": "test.bin"
     },
